27-private-container-registry/challenge/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: d27-private-container-registry-svc
  namespace: team-sandbox
  labels:
    app.kubernetes.io/name: d27-private-container-registry
    challenge: d27
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: d27-private-container-registry
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: ssh
      port: 22
      targetPort: 22
